--- a/style.css
+++ b/style.css
@@ -177,6 +177,11 @@ a.active {
   margin-top: 0;
 }
 
+.sitemap {
+  background-color: #F9DCC4;
+  padding-bottom: 5rem;
+  text-align: center;
+}
 
 #svgJS g:hover polyline,
 #svgJS g:hover line {
